Fri Nov 26 14:19:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Event/ECG_Complex_Address_Server.cpp:
          Fixed compile problem

Fri Nov 26 10:28:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_1535_Regression/Bug_1535_Regression.mpc:
          Add minimum_corba as base project, instead of adding
          avoids += minimum_corba, the base does just the same and
          make it a little bit better maintainable in the future

Fri Nov 26 09:58:12 UTC 2004  Martin Corino  <mcorino@remedy.nl>

        * orbsvcs/orbsvcs/Event/ECG_Complex_Address_server.cpp:
	  Changed use of iostreams to ACE_DEBUG because of compile problems
	  with ACE_LACKS_IOSTREAMS_TOTALLY (VxWorks).

Fri Nov 26 09:43:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO-INSTALL.html:
          Fixed link to acedefaults.mpb

Fri Nov 26 07:23:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/Log/Basic_Log_Test/Basic_Log_Test.cpp:
          Fixed compile problem in emulated exception builds

Thu Nov 25 13:42:03 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_argument.cpp:

          Changed marking of argument types as 'seen in operation'
          only if the argument node is created in the main file.
          This change eliminates problematic generation of arg
          template class specializations in a file other than
          the one in which the type is actually used as an operation
          parameter. Thanks again to Johnny Willemsen
          <jwillemsen@remedy.nl> for reporting the scoreboard error
          in compilation of the DsLogAdmin library that uncovered
          the problem.

Thu Nov 25 09:53:37 2004  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/tests/Log/Basic_Log_Test/Basic_Log_Test.cpp:
	* orbsvcs/tests/Log/Basic_Log_Test/Basic_Log_Test.h:

	  Pass argc and argv to parse_args() method instead of stashing