@@ -370,14 +370,6 @@ project </a> file.</P>
       and build both client and server. <P>
 </OL>
 
-<H4><A NAME="taoace">TAOACE.dsw, and TAOACE.sln files</A></H4>
-
-<P>TAOACE.dsw and TAOACE.sln are  Visual C++ 6.0 and VC 7.1 workspace
-files that loads the projects ACE, ACEXML, Kokyu, TAO, TAO_IDL (the
-compiler), gperf, the orb services libraries, and the standalone
-executables (such as Naming Service, etc.).  It can be used to build
-all the files needed to build/run TAO applications.</P>
-
 <H4>Visual C++ 7.1</H4>
 The DOC group doesn't support TAO on VC++ 7.0 since the libraries that
 were shipped with VC++ 7.0 did not work well. The DOC group supports
